# calendar_icelandic

./: README.md  cal_is.py  pyproject.toml  setup.py
cal_is/: cal_is.py
calendar_icelandic/: calendar_config.py  colors.py  day.py  display.py  mode.py  month.py  template.py  termainl_calendar.py  visualizer.py
