[tool.poetry]
name = "calendar-icelandic"
version = "0.1.0"
description = ""
authors = ["thorgeir <thorgeir@travelshift.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
workalendar = "^17.0.0"

[tool.poetry.group.dev.dependencies]
mypy = "^1.6.1"
black = "^23.10.0"
flake8 = "^6.1.0"
Sphinx = "^7.2.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
